// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package org.example.eventsourcedentity;

option java_outer_classname = "CounterApi";

message IncreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}


service CounterService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: ".domain.Counter"
      type_id: "counter"
      state: ".domain.CounterState"
      events: [".domain.Increased", ".domain.Decreased"]
    }
  };

  rpc Increase (IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease (DecreaseValue) returns (google.protobuf.Empty);
}
